Image Hovers, Project Pages and Navigation
Completed the image hovers with names and made each project its own
page. Corrected navigation from each external page. Created navigation
through each project in the footer of each project page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="custom_overide.css">
+    <link rel="stylesheet" type="text/css" href="custom_overide.css"/>
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -27,6 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
+          <li><a href="#">HOME</a></li>
           <li><a href="#thepassion">THE PASSION</a></li>
           <li><a href="#justme">JUST ME</a></li>
           <li><a href="#mydrive">MY DRIVE</a></li>
@@ -56,44 +57,132 @@
         <div id="thepassion"><h2>THE PASSION</h2></div>
       </div>
     </div> 
+
+
+
   
     <div class="large-6 column clear-padding">
       <div class="project-info">
-        <a href="#">
-          <h3>Example</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+        <a href="projects/hyvee.html">
+          <h3>Hyvee Floral</h3>
+          <p>Photography, Web, Print</p>
         </a>
         <img src="img/tree.jpg">
       </div>
     </div>
 
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/greasy_garage.html">
+          <h3>Greasy Garage</h3>
+          <p>Identity, Print</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/shotgun_weddings.html">
+          <h3>Shotgun Weddings</h3>
+          <p>Identity</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/monster.html">
+          <h3>Mommy's Little Monster</h3>
+          <p>Identity System, Print</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/maroon5.html">
+          <h3>Maroon 5</h3>
+          <p>Print</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/heartland.html">
+          <h3>Heartland Autobody</h3>
+          <p>Web</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/starbucks.html">
+          <h3>Starbucks</h3>
+          <p>Print</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/afan.html">
+          <h3>Alliance for the Future of Agriculture in Nebraska</h3>
+          <p>Print</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/pups_paws.html">
+          <h3>Pup's Paws</h3>
+          <p>Package</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+
     <div class="large-6 column clear-padding">
-      <img src="img/tree.jpg">
+      <div class="project-info">
+        <a href="projects/pinnacle.html">
+          <h3>Pinnacle Bank Arena</h3>
+          <p>Mobile</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
     </div>
+    
+    <div class="large-6 column clear-padding">
+      <div class="project-info">
+        <a href="projects/nra.html">
+          <h3>National Rifle Association</h3>
+          <p>Promotional, Print</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
+    </div>
+
+    <div class="large-6 column clear-padding">
+      <div class="project-info">
+        <a href="projects/bebs_jam.html">
+          <h3>Beb's Jam</h3>
+          <p>Package</p>
+        </a>
+        <img src="img/tree.jpg">
+      </div>
+    </div>
+
+
+
 
 
     <div class="row">
@@ -139,32 +228,21 @@
         <p>Would you like to discuss anything you've seen above? Maybe you just want to get to know me better. Use the form to the right to contact me and I will be in touch soon.</p>
       </div>
 
+        <form>
+          <div class="large-6 large-offset-1 columns end">
+            <label>Email
+            <input type="text" placeholder="email" />
+            </label>
+
+            <label>What can I help you with?
+            <textarea placeholder="text"></textarea>
+
+            <a href="#" class="button expand">Submit</a>
+          </div>
+        </form>
     </div>
 
 
-<form>
-  <div class="row">
-    <div class="large-6 large-offset-1 columns end">
-      <label>Email
-        <input type="text" placeholder="email" />
-      </label>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="large-6 large-offset-1 columns end">
-      <label>What can I help you with?
-        <textarea placeholder="text"></textarea>
-      </label>
-    </div>
-  </div>
-</form>
-
-  <div class="row">
-    <div class="large-6 large-offset-1 columns end">
-      <a href="#" class="button expand">Submit</a>
-    </div>
-  </div>
 
 
 <footer class="black">
@@ -178,6 +256,13 @@
 
 
 
+
+
+
+
+  
+
+
   <!-- close the off-canvas menu -->
   <a class="exit-off-canvas"></a>
 
@@ -185,19 +270,6 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-    
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
