--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
+          <li><img src="img/index.svg"></li>
           <li><a href="#">HOME</a></li>
           <li><a href="#thepassion">THE PASSION</a></li>
           <li><a href="#justme">JUST ME</a></li>
@@ -38,22 +39,22 @@
     <!-- main content goes here -->
 
 
-   <div class="row">
-      <div class="large-8 large-offset-1 columns">
+   <div class="row h-logo">
+      <div class="large-8 medium-8 large-offset-1 medium-offset-1 small-12 columns">
         <img src="img/index.svg">
       </div>
     </div> 
 
 
     <div class="row">
-      <div class="large-6 large-offset-6 columns the-passion">
+      <div class="large-5 medium-5 large-offset-6 medium-offset-6 columns end small-12 the-passion">
         <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
       </div>
     </div> 
 
 
     <div class="row">
-      <div class="large-6 large-offset-6 columns">
+      <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns small-12">
         <div id="thepassion"><h2>THE PASSION</h2></div>
       </div>
     </div> 
@@ -61,7 +62,7 @@
 
 
   
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/hyvee.html">
           <h3>Hyvee Floral</h3>
@@ -71,7 +72,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/greasy_garage.html">
           <h3>Greasy Garage</h3>
@@ -81,7 +82,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/shotgun_weddings.html">
           <h3>Shotgun Weddings</h3>
@@ -91,7 +92,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/monster.html">
           <h3>Mommy's Little Monster</h3>
@@ -101,7 +102,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/maroon5.html">
           <h3>Maroon 5</h3>
@@ -111,7 +112,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/heartland.html">
           <h3>Heartland Autobody</h3>
@@ -121,7 +122,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/starbucks.html">
           <h3>Starbucks</h3>
@@ -131,7 +132,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/afan.html">
           <h3>Alliance for the Future of Agriculture in Nebraska</h3>
@@ -141,7 +142,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/pups_paws.html">
           <h3>Pup's Paws</h3>
@@ -151,7 +152,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/pinnacle.html">
           <h3>Pinnacle Bank Arena</h3>
@@ -161,7 +162,7 @@
       </div>
     </div>
     
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/nra.html">
           <h3>National Rifle Association</h3>
@@ -171,7 +172,7 @@
       </div>
     </div>
 
-    <div class="large-6 column clear-padding">
+    <div class="large-6 medium-6 small-12 column clear-padding">
       <div class="project-info">
         <a href="projects/bebs_jam.html">
           <h3>Beb's Jam</h3>
@@ -186,50 +187,50 @@
 
 
     <div class="row">
-      <div class="large-11 large-offset-1 columns">
+      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
         <div id="justme"><h2>JUST ME</h2></div>
       </div>
     </div>
 
     <div class="row">
-      <div class="large-7 large-offset-4 columns end">
+      <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
       </div>
     </div> 
 
     <div class="row">
-      <div class="large-6 large-offset-6 columns">
+      <div class="large-6 medium-6 large-offset-6 medium-offset-6 small-12 columns">
         <div id="mydrive"><h2>MY DRIVE</h2></div>
       </div>
     </div>
 
 
-    <div class="large-4 column clear-padding">
+    <div class="large-4 medium-4 small-12 column clear-padding">
       <img src="img/tree.jpg">
     </div>
 
-    <div class="large-4 column clear-padding">
+    <div class="large-4 medium-4 small-12 column clear-padding">
       <img src="img/tree.jpg">
     </div>
 
-    <div class="large-4 column clear-padding">
+    <div class="large-4 medium-4 small-12 column clear-padding">
       <img src="img/tree.jpg">
     </div>
 
     <div class="row">
-      <div class="large-11 large-offset-1 columns">
+      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
         <div id="talkdesign"><h2>LET'S TALK DESIGN</h2></div>
       </div>
     </div>
 
 
     <div class="row">
-      <div class="large-3 large-offset-1 column">
+      <div class="large-3 medium-3 large-offset-1 medium-offset-1 small-12 column">
         <p>Would you like to discuss anything you've seen above? Maybe you just want to get to know me better. Use the form to the right to contact me and I will be in touch soon.</p>
       </div>
 
         <form>
-          <div class="large-6 large-offset-1 columns end">
+          <div class="large-6 medium-6 large-offset-1 medium-offset-1 small-12 columns end">
             <label>Email
             <input type="text" placeholder="email" />
             </label>
@@ -247,9 +248,9 @@
 
 <footer class="black">
   <div class="row">
-    <div class="large-6 columns">&copy; Copyright editionh 2014</div>
-    <div class="large-3 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-3 columns">402.641.3518</div>
+    <div class="large-4 medium-4 small-12 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 small-12 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 small-12 columns">402.641.3518</div>
   </div>
 </footer>
 
