--- a/projects/shotgun_weddings.html
+++ b/projects/shotgun_weddings.html
@@ -27,6 +27,7 @@
     <aside class="right-off-canvas-menu">
         <!-- whatever you want goes here -->
         <ul>
+          <li><img src="../img/index.svg"></li>
           <li><a href="../index.html">HOME</a></li>
           <li><a href="../index.html#thepassion">THE PASSION</a></li>
           <li><a href="../index.html#justme">JUST ME</a></li>
@@ -39,26 +40,26 @@
 
 
     <div class="row">
-      <div class="large-11 large-offset-1 columns">
+      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
         <h2>SHOTGUN WEDDINGS</h2>
       </div>
     </div>
 
     <div class="row">
-      <div class="large-7 large-offset-4 columns end">
+      <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
       </div>
     </div> 
 
 
   <div class="row">
-    <div class="large-12 column project-img">
+    <div class="large-12 medium-12 small-12 column project-img">
       <img src="../img/tree.jpg">
     </div>
   </div>
 
   <div class="row">
-    <div class="large-12 column project-img">
+    <div class="large-12 medium-12 small-12 column project-img">
       <img src="../img/tree.jpg">
     </div>
   </div>
