--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="row">
       <div class="large-5 medium-5 large-offset-6 medium-offset-6 columns end small-12 the-passion">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
       </div>
     </div> 
 
@@ -126,7 +126,7 @@
       <div class="project-info">
         <a href="projects/starbucks.html">
           <h3>Starbucks</h3>
-          <p>Print</p>
+          <p>Photography, Print</p>
         </a>
         <img src="img/tree.jpg">
       </div>
@@ -136,7 +136,7 @@
       <div class="project-info">
         <a href="projects/afan.html">
           <h3>Alliance for the Future of Agriculture in Nebraska</h3>
-          <p>Print</p>
+          <p>Photography, Print</p>
         </a>
         <img src="img/tree.jpg">
       </div>
@@ -194,7 +194,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <p>Hello! My name is Dakotah Buchli, but my designer name is edition<b>h</b>. I am a small-town girl, born and raised just west of Lincoln, Nebraska. I have a passion for all things creative and thrive off of the opportunity to explore new things within the design world. I am a quick learner with the drive and determination to complete any task I put my mind to. I am most interested in the areas of print, typography, and photography, but am also finding a new love in web design. I value honesty and integrity in relationships and enjoy working with and around other people. </p>
       </div>
     </div> 
 
@@ -226,17 +226,17 @@
 
     <div class="row">
       <div class="large-3 medium-3 large-offset-1 medium-offset-1 small-12 column">
-        <p>Would you like to discuss anything you've seen above? Maybe you just want to get to know me better. Use the form to the right to contact me and I will be in touch soon.</p>
+        <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you!</p>
       </div>
 
         <form>
           <div class="large-6 medium-6 large-offset-1 medium-offset-1 small-12 columns end">
-            <label>Email
-            <input type="text" placeholder="email" />
+            <label>E-mail
+            <input type="text" placeholder="example@example.com" />
             </label>
 
-            <label>What can I help you with?
-            <textarea placeholder="text"></textarea>
+            <label>How can I help?
+            <textarea placeholder=""></textarea>
 
             <a href="#" class="button expand">Submit</a>
           </div>
