--- a/projects/greasy_garage.html
+++ b/projects/greasy_garage.html
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Greasy Garage</p>
+        <h5>Application:</h5><p>Logo and Style Guide (Identity, Print)</p>
+        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle. By using grunge textures, I was able to call the grit and grime that goes along with mechanical work. The branded style guide lays out the guidelines for use of the identity and brand components.</p>
       </div>
     </div> 
 
