--- a/projects/maroon5.html
+++ b/projects/maroon5.html
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Maroon 5</p>
+        <h5>Application:</h5><p>Tour Booklet (Print)</p>
+        <p>Maroon 5 is a pop music group born and bred in Los Angeles. With their last album, V, the group will embark on a world tour beginning in February 2015. They were looking for a booklet that reflects the group's personality and offered information regarding the tour. To appeal to the young Generation Y audience, I used bold patterns and colors partnered with experimental spreads to express the same energy Maroon 5 brings through in their music.</p>
       </div>
     </div> 
 
