--- a/projects/monster.html
+++ b/projects/monster.html
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Mommy's Little Monster</p>
+        <h5>Application:</h5><p>Logo and Identity System (Identity, Print)</p>
+        <p>Mommy's Little Monster is a specialty clothing line for children featured at a local boutique. Parents, specifically Millennials who are mothers, are the target audience. With the logo, the company wanted to attract those fashion concious mothers who are looking for more contemporary children's clothing. The logo and system reflects a child's personality in that it is playful and youthful, drawing an element of emotion.</p>
       </div>
     </div> 
 
