--- a/projects/afan.html
+++ b/projects/afan.html
@@ -47,7 +47,10 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Starbucks</p>
+        <h5>Application:</h5><p>Annual Report (Photography, Print)</p>
+        <p>Starbucks is a national coffeehouse chain whose company is based out of Seattle, Washingtion. They were in need of an annual report that reflected the company's long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40. Using strong graphics and illustrations, I was able to enhance otherwise monotonous information into something engaging.</p>
+      </div>
       </div>
     </div> 
 
