--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Heartland Autobody Incorporated</p>
+        <h5>Application:</h5><p>Web Layout and Design (Web)</p>
+        <p>Heartland Autobody offers complete collision repair services for and all makes and models, foreign or domestic. The current website design is very generic and does not reflect who the company is and what they do. They needed a website that was easily accessible across all platforms and sizes to appeal to the tech-savvy Generation Y. The new site features compelling imagery, company reviews, and an edgy, industrial vibe that calls to the nature of the work.</p>
       </div>
     </div> 
 
