--- a/projects/hyvee.html
+++ b/projects/hyvee.html
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>HyVee (Floral Department)</p>
+        <h5>Application:</h5><p>Ad Campaign (Photography, Web, Print)</p>
+        <p>HyVee is a large grocery store chain that prides themselves on quality products and customer service. HyVee was looking for a way to appeal to a generation of men who might benefit of some assistance when ordering flowers, Generation X. Using a series of witty taglines will help draw an emotional and humorous connection to a man looking to purchase flowers. An additional online component offers a fun and simple way to order flowers and set dates for future reference.</p>
       </div>
     </div> 
 
