Content, Naming Consistency, Nav
Competed adding all of the content for the project pages. Renamed
certain pages and tags to be more consistent with the rest of the code.
Started working on making the navigation fixed to scroll with the page.

--- a/projects/afan.html
+++ b/projects/afan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -47,12 +47,12 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Starbucks</p>
-        <h5>Application:</h5><p>Annual Report (Photography, Print)</p>
-        <p>Starbucks is a national coffeehouse chain whose company is based out of Seattle, Washingtion. They were in need of an annual report that reflected the company's long lasting reputation as a hip, sheek, and classy location to get gourmet coffee. This reputation is earned from the strong reaction to the decor and contemporary design by the target audience of men and women, ages 25—40. Using strong graphics and illustrations, I was able to enhance otherwise monotonous information into something engaging.</p>
+        <h5>Client:</h5><p>Alliance for the Future of Agriculture in Nebraska</p>
+        <h5>Application:</h5><p>Promotional Booklet (Photography, Print)</p>
+        <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan's knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock. I was able to appeal to an audience of males ranging between ages 18 and 28 by using sharp imagery and simplistic graphics to present the information in an engaging way.</p>
       </div>
       </div>
-    </div> 
+
 
 
   <div class="row">
@@ -71,7 +71,7 @@
   <footer>
   <div class="row">
     <div class="large-6 columns"><a href="starbucks.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="pups_paws.html">NEXT</a></div>
+    <div class="large-6 columns"><a href="pups-paws.html">NEXT</a></div>
   </div>
 </footer>
 
