--- a/projects/bebs-jam.html
+++ b/projects/bebs-jam.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -41,15 +41,15 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>GREASY GARAGE</h2>
+        <h2>BEB'S JAM</h2>
       </div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <h5>Client:</h5><p>Greasy Garage</p>
-        <h5>Application:</h5><p>Logo and Style Guide (Identity, Print)</p>
-        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle. By using grunge textures, I was able to call the grit and grime that goes along with mechanical work. The branded style guide lays out the guidelines for use of the identity and brand components.</p>
+        <h5>Client:</h5><p>Beb's Jam</p>
+        <h5>Application:</h5><p>Label Design (Package)</p>
+        <p>Beb's Jam was founded in 2010 by a couple in rural Maine. The business started out as a just a hobby and turned into a full-steam-ahead jam producing operation. They wanted to target couples between ages 25 and 50 who were conscious about their health and were looking for unique flavors of jam. I was able to create a cohesive line of labels that called attention to the rustic home-town of the founding couple.</p>
       </div>
     </div> 
 
@@ -69,13 +69,10 @@
 
   <footer>
   <div class="row">
-    <div class="large-6 columns"><a href="hyvee.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="shotgun_weddings.html">NEXT</a></div>
+    <div class="large-6 columns"><a href="nra.html">PREVIOUS</a></div>
+    <div class="large-6 columns"><a href="hyvee.html">NEXT</a></div>
   </div>
 </footer>
-
-
-
 
 
 
