--- a/projects/pinnacle.html
+++ b/projects/pinnacle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Pinnacle Bank Arena</p>
+        <h5>Application:</h5><p>Mobile Ticket Application (Mobile)</p>
+        <p>The Pinnacle Bank Arena is a new establishment in Lincoln, Nebraska that hosts sporting events and all types of entertainment. The Arena was looking for a way to better handle the process of selling tickets and a mobile application was the way to go. Generation Y, of whom 60% download mobile applications, is the primary audience for this app. I was able to approach the design in a way that reflected the architecture of the physical Area. I implemented similar geometric shapes, and center compositions to present the information clearly.</p>
       </div>
     </div> 
 
@@ -67,7 +69,7 @@
 
   <footer>
   <div class="row">
-    <div class="large-6 columns"><a href="pups_paws.html">PREVIOUS</a></div>
+    <div class="large-6 columns"><a href="pups-paws.html">PREVIOUS</a></div>
     <div class="large-6 columns"><a href="nra.html">NEXT</a></div>
   </div>
 </footer>
