--- a/projects/pups-paws.html
+++ b/projects/pups-paws.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -41,13 +41,15 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>SHOTGUN WEDDINGS</h2>
+        <h2>PUP'S PAWS</h2>
       </div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Pup's Paws</p>
+        <h5>Application:</h5><p>Product Branding and Package Development (Package)</p>
+        <p>Founded in a small-town shoppe, Pup's Paws is a newly emerging dog food and supply company that was looking an identity and packaging system that better expressed their standards. They are looking to attract health concious Millenials by using a natural process to produce all items and food. Using recycled paper and a more personal, hand-written approach to type, I was able to create a cohesive system that reflects the small-town business and their quality goods.</p>
       </div>
     </div> 
 
@@ -67,11 +69,10 @@
 
   <footer>
   <div class="row">
-    <div class="large-6 columns"><a href="greasy_garage.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="monster.html">NEXT</a></div>
+    <div class="large-6 columns"><a href="afan.html">PREVIOUS</a></div>
+    <div class="large-6 columns"><a href="pinnacle.html">NEXT</a></div>
   </div>
 </footer>
-
 
 
 
