--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="css/custom.css"/>
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -40,21 +40,21 @@
 
 
    <div class="row h-logo">
-      <div class="large-8 medium-8 large-offset-1 medium-offset-1 small-12 columns">
+      <div class="large-8 medium-8 large-offset-1 medium-offset-1 columns">
         <img src="img/index.svg">
       </div>
     </div> 
 
 
     <div class="row">
-      <div class="large-5 medium-5 large-offset-6 medium-offset-6 columns end small-12 the-passion">
+      <div class="large-5 medium-5 large-offset-6 medium-offset-6 columns end the-passion">
         <p>What does it mean to design? It means everday I get to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and chances to grow. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
       </div>
     </div> 
 
 
     <div class="row">
-      <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns small-12">
+      <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns">
         <div id="thepassion"><h2>THE PASSION</h2></div>
       </div>
     </div> 
@@ -62,7 +62,7 @@
 
 
   
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/hyvee.html">
           <h3>Hyvee Floral</h3>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/greasy_garage.html">
           <h3>Greasy Garage</h3>
@@ -82,7 +82,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/shotgun_weddings.html">
           <h3>Shotgun Weddings</h3>
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/monster.html">
           <h3>Mommy's Little Monster</h3>
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/maroon5.html">
           <h3>Maroon 5</h3>
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/heartland.html">
           <h3>Heartland Autobody</h3>
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/starbucks.html">
           <h3>Starbucks</h3>
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/afan.html">
           <h3>Alliance for the Future of Agriculture in Nebraska</h3>
@@ -142,7 +142,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/pups_paws.html">
           <h3>Pup's Paws</h3>
@@ -152,7 +152,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/pinnacle.html">
           <h3>Pinnacle Bank Arena</h3>
@@ -162,7 +162,7 @@
       </div>
     </div>
     
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/nra.html">
           <h3>National Rifle Association</h3>
@@ -172,7 +172,7 @@
       </div>
     </div>
 
-    <div class="large-6 medium-6 small-12 column clear-padding">
+    <div class="large-6 medium-6 column clear-padding">
       <div class="project-info">
         <a href="projects/bebs_jam.html">
           <h3>Beb's Jam</h3>
@@ -187,50 +187,50 @@
 
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
+      <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
         <div id="justme"><h2>JUST ME</h2></div>
       </div>
     </div>
 
     <div class="row">
-      <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
+      <div class="large-7 medium-7 large-offset-4 medium-offset-4 columns end">
         <p>Hello! My name is Dakotah Buchli, but my designer name is edition<b>h</b>. I am a small-town girl, born and raised just west of Lincoln, Nebraska. I have a passion for all things creative and thrive off of the opportunity to explore new things within the design world. I am a quick learner with the drive and determination to complete any task I put my mind to. I am most interested in the areas of print, typography, and photography, but am also finding a new love in web design. I value honesty and integrity in relationships and enjoy working with and around other people. </p>
       </div>
     </div> 
 
     <div class="row">
-      <div class="large-6 medium-6 large-offset-6 medium-offset-6 small-12 columns">
+      <div class="large-6 medium-6 large-offset-6 medium-offset-6 columns">
         <div id="mydrive"><h2>MY DRIVE</h2></div>
       </div>
     </div>
 
 
-    <div class="large-4 medium-4 small-12 column clear-padding">
+    <div class="large-4 medium-4 column clear-padding">
       <img src="img/tree.jpg">
     </div>
 
-    <div class="large-4 medium-4 small-12 column clear-padding">
+    <div class="large-4 medium-4 column clear-padding">
       <img src="img/tree.jpg">
     </div>
 
-    <div class="large-4 medium-4 small-12 column clear-padding">
+    <div class="large-4 medium-4 column clear-padding">
       <img src="img/tree.jpg">
     </div>
 
     <div class="row">
-      <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
+      <div class="large-11 medium-11 large-offset-1 medium-offset-1 columns">
         <div id="talkdesign"><h2>LET'S TALK DESIGN</h2></div>
       </div>
     </div>
 
 
     <div class="row">
-      <div class="large-3 medium-3 large-offset-1 medium-offset-1 small-12 column">
+      <div class="large-3 medium-3 large-offset-1 medium-offset-1 column">
         <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you!</p>
       </div>
 
         <form>
-          <div class="large-6 medium-6 large-offset-1 medium-offset-1 small-12 columns end">
+          <div class="large-6 medium-6 large-offset-1 medium-offset-1 columns end">
             <label>E-mail
             <input type="text" placeholder="example@example.com" />
             </label>
@@ -248,9 +248,9 @@
 
 <footer class="black">
   <div class="row">
-    <div class="large-4 medium-4 small-12 columns ">&copy; Copyright editionh 2014</div>
-    <div class="large-4 medium-4 small-12 columns">d.n.buchli@hotmail.com</div>
-    <div class="large-4 medium-4 small-12 columns">402.641.3518</div>
+    <div class="large-4 medium-4 columns ">&copy; Copyright editionh 2014</div>
+    <div class="large-4 medium-4 columns">d.n.buchli@hotmail.com</div>
+    <div class="large-4 medium-4 columns">402.641.3518</div>
   </div>
 </footer>
 
