--- a/projects/greasy-garage.html
+++ b/projects/greasy-garage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -41,13 +41,15 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>PUP'S PAWS</h2>
+        <h2>GREASY GARAGE</h2>
       </div>
     </div>
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>Greasy Garage</p>
+        <h5>Application:</h5><p>Logo and Style Guide (Identity, Print)</p>
+        <p>Greasy Garage Custom Motorcyles is an emerging company run by sole-proprietor, Duane Niedner. Greasy Garage needed a new identity that reflected the custom work the shop does and appealed to Generation X, those most likely looking to restore a motorcycle. By using grunge textures, I was able to call the grit and grime that goes along with mechanical work. The branded style guide lays out the guidelines for use of the identity and brand components.</p>
       </div>
     </div> 
 
@@ -67,10 +69,13 @@
 
   <footer>
   <div class="row">
-    <div class="large-6 columns"><a href="afan.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="pinnacle.html">NEXT</a></div>
+    <div class="large-6 columns"><a href="hyvee.html">PREVIOUS</a></div>
+    <div class="large-6 columns"><a href="shotgun-weddings.html">NEXT</a></div>
   </div>
 </footer>
+
+
+
 
 
 
