--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
