--- a/projects/nra.html
+++ b/projects/nra.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -47,7 +47,9 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
-        <p>Being a designer allows me to express my passion for all things in a creative and purposeful way. With the infinate combinations of type and image possible, each project brings new challenges and opportunites. Combining my strengths, passion, and drive as a designer gives me the opportunity to bring a new light to design—a new edition—editionh.</p>
+        <h5>Client:</h5><p>National Rifle Association</p>
+        <h5>Application:</h5><p>Social Activism Campaign, Promotional Design (Promotional, Print)</p>
+        <p>The National Rifle Association was founded in 1871 as a group whose mission was to advance rifle marksmanship. The association was seeking a campaign that would spark interest in the different areas of rifle safety education offered. The target audience, males between ages 18 and 33, are prime to market to due to their eligibility to participate in firearm related activities. Using distinctive silhouettes to represent each educational area, I supported them with the tagline, "Serving. Protecting. Teaching."</p>
       </div>
     </div> 
 
@@ -69,7 +71,7 @@
   <footer>
   <div class="row">
     <div class="large-6 columns"><a href="pinnacle.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="bebs_jam.html">NEXT</a></div>
+    <div class="large-6 columns"><a href="bebs-jam.html">NEXT</a></div>
   </div>
 </footer>
 
