--- a/projects/shotgun-weddings.html
+++ b/projects/shotgun-weddings.html
@@ -1,11 +1,11 @@
-<!doctype html>
+off-canvas-menu<!doctype html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>editionh</title>
     <link rel="stylesheet" href="../css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="../custom_overide.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <script src="../js/vendor/modernizr.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
 
 <nav class="tab-bar">
   <div class="right-small">
-    <a href="#idOfRightMenu" role="button" aria-controls="idOfRightMenu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
+    <a href="#off-canvas-menu" role="button" aria-controls="off-canvas-menu" aria-expanded="false" class="right-off-canvas-toggle menu-icon" ><span></span></a>
   </div>
 </nav>
 
@@ -41,7 +41,7 @@
 
     <div class="row">
       <div class="large-11 medium-11 large-offset-1 medium-offset-1 small-12 columns">
-        <h2>BEB'S JAM</h2>
+        <h2>SHOTGUN WEDDINGS</h2>
       </div>
     </div>
 
@@ -67,10 +67,11 @@
 
   <footer>
   <div class="row">
-    <div class="large-6 columns"><a href="nra.html">PREVIOUS</a></div>
-    <div class="large-6 columns"><a href="hyvee.html">NEXT</a></div>
+    <div class="large-6 columns"><a href="greasy-garage.html">PREVIOUS</a></div>
+    <div class="large-6 columns"><a href="monster.html">NEXT</a></div>
   </div>
 </footer>
+
 
 
 
